docs/css/pydoctor.css
.pydoctor-navbar {
    margin-bottom: 0px;
}

.page-header {
    margin-top: 22px;
    position: sticky;
    top: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: baseline;
    background-color: #fff;
    margin-bottom: 3px;
    border-bottom: 0;
    box-shadow: 0px 0px 8px 8px #fff;
}
.page-header h1 {
    margin-bottom: 0;
}

.categoryHeader {
    font-size: 24px;
    color: #777;
    margin-bottom: 1.8em;
}

a[name] {
    position: relative;
    bottom: 80px;
    font-size: 0;
}

.bs-docs-container ul {
    margin-top: 10px;
    padding-left: 10px;
}

.bs-docs-container li {
    padding-top: 5px;
    padding-bottom: 5px;
}

.bs-docs-container li a {
    text-decoration: none;
}

.bs-docs-container ul {
    margin-left: 10px;
}

.bs-docs-container ul ul {
    border-left-color: #e1f5fe;
    border-left-width: 1px;
    border-left-style: solid;
}

.bs-docs-container ul ul ul {
    border-left-color: #b3e5fc;
}

.bs-docs-container ul ul ul ul {
    border-left-color: #81d4fa;
}

.bs-docs-container ul ul ul ul ul {
    border-left-color: #4fc3f7;
}

.bs-docs-container ul ul ul ul ul ul {
    border-left-color: #29b6f6;
}

.bs-docs-container ul ul ul ul ul ul ul {
    border-left-color: #03a9f4;
}

.bs-docs-container ul ul ul ul ul ul ul ul {
    border-left-color: #039be5;
}

.pre {
    white-space: pre;
}

.undocumented {
    font-style: italic;
    color: #9e9e9e;
}

.functionBody p {
    margin-top: 6px;
    margin-bottom: 6px;
}

#splitTables > p {
    margin-bottom: 5px;
}

#splitTables > table, .fieldTable {
    margin-bottom: 20px;
    width: 100%;
    border: 0;
}

#splitTables > table {
    border: 1px solid #eee;
}

#splitTables > table tr {
    border-bottom-color: #eee;
    border-bottom-width: 1px;
    border-bottom-style: solid;
}

#splitTables > table tr td, .fieldTable tr td {
    padding: 5px;
}

#splitTables > table tr td {
    border-left-color: #eee;
    border-left-width: 1px;
    border-left-style: solid;
}

#splitTables > table tr td:nth-child(1), .fieldTable tr td:nth-child(1) {
    border-left: none;
    width: 150px;
}

#splitTables > table tr td:nth-child(2), .fieldTable tr td.fieldArg {
    width: 200px;
}

tr.package {
    background-color: #fff3e0;
}

tr.module {
    background-color: #fff8e1;
}

tr.class, tr.classvariable, tr.baseclassvariable {
    background-color: #fffde7;
}

tr.instancevariable, tr.baseinstancevariable, tr.variable, tr.attribute, tr.property {
    background-color: #f3e5f5;
}

tr.interface {
    background-color: #fbe9e7;
}

tr.method, tr.function, tr.basemethod, tr.baseclassmethod, tr.classmethod {
    background-color: #f1f8e9;
}

tr.private {
    background-color: #f1f1f1;
}

.fieldTable {
    margin-top: 10px;
}

.fieldName {
    font-weight: bold;
}


#childList > div {
    margin: 10px;
    padding: 10px;
    padding-bottom: 5px;
}

.functionBody {
    margin-left: 15px;
}

.functionBody > #part {
    font-style: italic;
}

.functionBody > #part > a {
    text-decoration: none;
}

.functionBody .interfaceinfo {
    font-style: italic;
    margin-bottom: 3px;
}

.functionBody > .undocumented {

    margin-top: 6px;
    margin-bottom: 6px;
}

/*
- Links to class/function/etc names are nested like this:
    <code><a>label</a></code>
  This applies to inline docstring content marked up as code,
  for example L{foo} in epytext or `bar` in restructuredtext,
  but also to links that are present in summary tables.
- 'functionHeader' is used for lines like `def func():` and `var =`
*/
code, .pre, #childList > div .functionHeader,
#splitTables > table tr td:nth-child(2), .fieldTable tr td.fieldArg {
    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
}
code, #childList > div .functionHeader, .fieldTable tr td.fieldArg {
    font-size: 90%;
    color: #222222;
}
code > a {
    color:#c7254e;
    background-color:#f9f2f4;
}
/* top navagation bar */
.page-header > h1 {
    margin-top: 0;
}
.page-header > h1 > code {
    color: #971c3a;
}

/*
This defines the code style, it's black on light gray.
It also overwrite the default values inherited from bootstrap min
*/
code {
    padding:2px 4px;
    background-color: #f4f4f4;
    border-radius:4px
}


a.functionSourceLink {
    font-weight: normal;
}


#childList > div {
    border-left-color: #03a9f4;
    border-left-width: 1px;
    border-left-style: solid;
    background: #fafafa;
}

.moduleDocstring {
    margin: 20px;
}

#partOf {
    margin-top: -13px;
    margin-bottom: 19px;
}

.fromInitPy {
    font-style: italic;
}

pre {
    padding-left: 0px;
}

/* Private stuff */

body.private-hidden #splitTables .private,
body.private-hidden #childList .private,
body.private-hidden #summaryTree .private {
    display: none;
}

/* We don't want to hide igraph._igraph and igraph._igraph.GraphBase, both of
 * which are private according to pydoctor because of the underscore. However,
 * we still want to hide private instance variables so we add a more
 * restrictive CSS rule */
body.private-hidden #splitTables td.module.private,
body.private-hidden #childList td.module.private,
body.private-hidden #summaryTree td.module.private {
    display: table-cell !important;
}
body.private-hidden #splitTables tr.module.private,
body.private-hidden #childList tr.module.private,
body.private-hidden #summaryTree tr.module.private {
    display: table-row !important;
}
body.private-hidden #splitTables li.private,
body.private-hidden #childList li.private,
body.private-hidden #summaryTree li.private {
    display: list-item !important;
}

#showPrivate {
    padding: 10px;
}

#current-docs-container {
    font-style: italic;
    padding-top: 11px;
}

/* Deprecation stuff */

.deprecationNotice {
    margin: 10px;
}

/* Syntax highlighting for source code */

.py-string {
    color: #337ab7;
}
.py-comment {
    color: #309078;
    font-style: italic;
}
.py-keyword {
    font-weight: bold;
}
.py-defname {
    color: #a947b8;
    font-weight: bold;
}
.py-builtin {
    color: #fc7844;
    font-weight: bold;
}

/* Doctest */

pre.py-doctest {
    padding: .5em;
}
.py-prompt, .py-more {
    color: #a8a8a8;
}
.py-output {
    color: #c7254e;
}

/* Admonitions */

div.rst-admonition p.rst-admonition-title:after {
    content: ":";
}

div.rst-admonition p.rst-admonition-title {
    margin: 0;
    padding: 0.1em 0 0.35em 0em;
    font-weight: bold;
}

div.rst-admonition p.rst-admonition-title {
    color: #333333;
}

div.rst-admonition {
    padding: 8px;
    margin-bottom: 20px;
    background-color: #EEE;
    border: 1px solid #CCC;
    border-radius: 4px;
}

div.warning, div.attention, div.danger, div.error, div.caution {
    background-color: #ffcf9cb0;
    border: 1px solid #ffbbaa;
}

div.danger p.rst-admonition-title, div.error p.rst-admonition-title, div.caution p.rst-admonition-title {
    color: #b94a48;
}

div.tip p.rst-admonition-title, div.hint p.rst-admonition-title, div.important p.rst-admonition-title{
    color: #3a87ad;
}

div.tip, div.hint, div.important {
    background-color: #d9edf7;
    border-color: #bce8f1;
}


/* igraph-specific customizations follow from here */

.pydoctor-navbar {
	display: none;
}

table.fieldTable tr td {
	vertical-align: baseline;
}

.moduleDocstring {
	margin: 20px 0;
}

.page-header h1 {
    font-size: 24px;
}
.categoryHeader {
    font-size: 18px !important;
	padding: 0 0 0 8px;
}
#showPrivate {
	display: none;
}
.undocumented {
    font-style: normal !important;
}

#search-box-container {
    /* search does not work yet so hide it */
    display: none;
}

.bs-docs-section .navbar .navbar-header {
	flex: 1;
}
.bs-docs-section .navbar .container {
	padding: 0;
}
.bs-docs-section .navbar .navbar-header .projecthome {
    display: none;
}
.bs-docs-section .navbar .navlinks a {
	float: right;
    margin: 0 0 0 16px;
}
.bs-docs-section .navbar .navlinks .navbar-brand a {
	float: none;
	margin: 0;
}

